@@ -31,7 +31,8 @@
 <body>
 
 <p class="windows">
-    <strong>Windows Support</strong> is <a href="http://cyberduck.ch/news/">coming</a> in 4.0. Public Beta now available.
+    <strong>Windows Support</strong> is <a href="http://cyberduck.ch/news/">coming</a> in 4.0. Public Beta now
+    available.
 </p>
 
 <p class="note">
@@ -58,12 +59,15 @@
     <li>[Bugfix] Limit number of concurrent transfers (<a
             href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
     </li>
+    <li>[Bugfix] Qeued transfers start in random order (#5632)</li>
     <li>[Bugfix] Dragging into topmost folder in browser (<a
             href="http://trac.cyberduck.ch/ticket/1945">#1945</a>)
     </li>
     <li>[Bugfix] ACLs getting dropped when updating metadata (S3) (<a
             href="http://trac.cyberduck.ch/ticket/5571">#5571</a>)
     </li>
+    <li>[Bugfix] .CDN_ACCESS_LOGS folder listing is empty (Cloudfiles) (<a
+            href="http://trac.cyberduck.ch/ticket/5350">#5350</a>)
     <li>[Bugfix] Unicode normalization for filenames in upload (<a
             href="http://trac.cyberduck.ch/ticket/5162">#5162</a>)
     </li>
@@ -73,6 +77,13 @@
     <li>[Bugfix] Large transfer history causes slowdown (<a
             href="http://trac.cyberduck.ch/ticket/2889">#2889</a>)
     </li>
+    <li>[Bugfix] Files not shown (<a
+            href="http://trac.cyberduck.ch/ticket/5570">#5570</a>) (Google Docs)
+    </li>
+    <li>[Bugfix] Images always converted to documents (<a
+            href="http://trac.cyberduck.ch/ticket/5601">#5601</a>) (Google Docs)
+    </li>
+    <li>[Bugfix] Preserve symbolic links in uploads (SFTP)</li>
 </ul>
 
 <p>Release notes for previous versions can be found at <a
