@@ -24,6 +24,7 @@ Changelog. Last modified: $Date$
 - [Bugfix] Large transfer history causes slowdown (#2889)
 - [Bugfix] Files not shown (#5570) (Google Docs)
 - [Bugfix] Images always converted to documents (#5601) (Google Docs)
+- [Bugfix] Preserve symbolic links in transfers (SFTP)
 
 3.8.1 [http://trac.cyberduck.ch/milestone/3.8.1]
 - [Bugfix] Fails to display custom language preference (#5500)
